# skipbutton

./: skipbutton.py
arduino_bootloader/: ATmegaBOOT_168.c  ATmegaBOOT_168_atmega328.hex
arduino_bootloader/.svn/: all-wcprops  entries
arduino_program/skipbutton/: skipbutton.pde
skipbutton_program/: Makefile.in  configure  configure.ac
skipbutton_program/src/: Makefile.am  Makefile.in  curlclient.cpp  curlclient.h  main.cpp  mpdclient.cpp  mpdclient.h  msgparser.cpp  msgparser.h
skipbutton_program/src/util/: serialport.cpp  serialport.h  tcpsocket.cpp
