bin_PROGRAMS = skipbutton

skipbutton_SOURCES = main.cpp \
                     msgparser.cpp \
                     msgparser.h \
                     mpdclient.h \
                     mpdclient.cpp \
                     curlclient.h \
                     curlclient.cpp \
                     util/serialport.cpp \
                     util/serialport.h \
                     util/baudrate.h \
                     util/misc.h \
                     util/misc.cpp \
                     util/timeutils.h \
                     util/timeutils.cpp \
                     util/tcpsocket.h \
                     util/tcpsocket.cpp \
                     util/thread.h \
                     util/thread.cpp \
                     util/mutex.h \
                     util/mutex.cpp \
                     util/condition.h \
                     util/condition.cpp \
                     util/lock.h

skipbutton_LDFLAGS = -lrt -lpthread
